--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       crossorigin="anonymous" />
 
     <link rel="stylesheet" href="index.css" />
-    <!-- <link rel="stylesheet" href="style.css" /> -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" />
@@ -33,77 +32,87 @@
         <div class="input-section">
           <h2 class="subtitle">Enter your details below</h2>
           <div class="units-toggle">
-            <div class="unit active">
+            <div class="unit active" id="metric-unit">
               <img
+                id="metric-uselector"
                 class="frame-child unselector"
                 alt=""
                 src="./public/group-32.svg" />
+              <div class="selector d-none" id="metric-selector"></div>
               <span>Metric</span>
             </div>
-            <div class="unit">
-              <div class="selector"></div>
+            <div class="unit" id="imperial-unit">
+              <img
+                id="imperial-uselector"
+                class="frame-child unselector d-none"
+                alt=""
+                src="./public/group-32.svg" />
+              <div class="selector" id="imperial-selector"></div>
               <span>Imperial</span>
             </div>
           </div>
-          <div class="" id="imperial-input">
-            <div class="input-container imperial-input">
+          <div class="input-container" id="metric-input">
+            <div class="input-item">
+              <label for="height">Height</label>
+              <div class="input-wrapper">
+                <input type="text" id="metric-height" />
+                <span class="unit-label">cm</span>
+              </div>
+            </div>
+            <div class="input-item">
+              <label for="weight">Weight</label>
+              <div class="input-wrapper">
+                <input type="text" id="metric-weight" />
+                <span class="unit-label">kg</span>
+              </div>
+            </div>
+          </div>
+          <div class="d-none" id="imperial-input">
+            <div class="input-container imperial-input-box">
               <div class="input-item">
-                <label for="height">Height</label>
+                <label for="height-ft">Height</label>
                 <div class="input-wrapper">
-                  <input type="text" id="height" value="185" />
+                  <input type="text" id="imperial-height-ft" />
                   <span class="unit-label">ft</span>
                 </div>
               </div>
               <div class="input-item">
                 <div class="input-wrapper">
-                  <input type="text" id="height" value="185" />
+                  <input type="text" id="imperial-height-in" />
                   <span class="unit-label">in</span>
                 </div>
               </div>
             </div>
-            <div class="input-container imperial-input">
+            <div class="input-container imperial-input-box">
               <div class="input-item">
-                <label for="height">Height</label>
+                <label for="weight-st">Weight</label>
                 <div class="input-wrapper">
-                  <input type="text" id="height" value="185" />
+                  <input type="text" id="imperial-weight-st" />
                   <span class="unit-label">st</span>
                 </div>
               </div>
               <div class="input-item">
                 <div class="input-wrapper">
-                  <input type="text" id="height" value="185" />
+                  <input type="text" id="imperial-weight-lbs" />
                   <span class="unit-label">lbs</span>
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- <div class="input-container " id="metric-input">
-            <div class="input-item">
-              <label for="height">Height</label>
-              <div class="input-wrapper">
-                <input type="text" id="height" value="185" />
-                <span class="unit-label">cm</span>
-              </div>
-            </div>
-            <div class="input-item">
-              <label for="height">Weight</label>
-              <div class="input-wrapper">
-                <input type="text" id="height" value="185" />
-                <span class="unit-label">kg</span>
-              </div>
-            </div>
-          </div> -->
-
           <div class="bmi-result">
             <div class="header">
               <p class="result-label">Your BMI is...</p>
-              <p class="result-value">23.4</p>
+              <p class="result-value" id="bmi-value"></p>
             </div>
-            <p class="result-description">
-              Your BMI suggests you’re a healthy weight. Your ideal weight is
-              between <b>63.3kgs - 85.2kgs</b>.
-            </p>
+            <div class="result-description">
+              <span class="result-description" id="bmi-description">
+                <!-- Result description will be injected here -->
+              </span>
+              <span class="healthy-weight-range" id="healthy-weight-range">
+                <!-- Healthy weight range will be injected here -->
+              </span>
+            </div>
           </div>
         </div>
       </section>
@@ -253,5 +262,108 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"></script>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", () => {
+        const metricUnit = document.getElementById("metric-unit");
+        const imperialUnit = document.getElementById("imperial-unit");
+        const metricInput = document.getElementById("metric-input");
+        const imperialInput = document.getElementById("imperial-input");
+        const metricUselector = document.getElementById("metric-uselector");
+        const metricSelector = document.getElementById("metric-selector");
+        const imperialUselector = document.getElementById("imperial-uselector");
+        const imperialSelector = document.getElementById("imperial-selector");
+
+        metricUnit.addEventListener("click", () => {
+          metricInput.classList.remove("d-none");
+          imperialInput.classList.add("d-none");
+          metricUselector.classList.remove("d-none");
+          metricSelector.classList.add("d-none");
+          imperialUselector.classList.add("d-none");
+          imperialSelector.classList.remove("d-none");
+        });
+
+        imperialUnit.addEventListener("click", () => {
+          metricInput.classList.add("d-none");
+          imperialInput.classList.remove("d-none");
+          metricUselector.classList.add("d-none");
+          metricSelector.classList.remove("d-none");
+          imperialUselector.classList.remove("d-none");
+          imperialSelector.classList.add("d-none");
+        });
+
+        const inputs = document.querySelectorAll("input");
+        inputs.forEach((input) => {
+          input.addEventListener("input", calculateBMI);
+        });
+      });
+
+      function calculateBMI() {
+        let height, weight, bmi;
+
+        const metricInput = document.getElementById("metric-input");
+        const imperialInput = document.getElementById("imperial-input");
+
+        if (metricInput.classList.contains("d-none")) {
+          // Imperial
+          const heightFt = parseFloat(
+            document.getElementById("imperial-height-ft").value
+          );
+          const heightIn = parseFloat(
+            document.getElementById("imperial-height-in").value
+          );
+          height = heightFt * 12 + heightIn;
+          height = height * 0.0254; // convert inches to meters
+
+          const weightSt = parseFloat(
+            document.getElementById("imperial-weight-st").value
+          );
+          const weightLbs = parseFloat(
+            document.getElementById("imperial-weight-lbs").value
+          );
+          weight = weightSt * 14 + weightLbs;
+          weight = weight * 0.453592; // convert lbs to kg
+        } else {
+          // Metric
+          height =
+            parseFloat(document.getElementById("metric-height").value) / 100; // convert cm to meters
+          weight = parseFloat(document.getElementById("metric-weight").value);
+        }
+
+        if (!isNaN(height) && height > 0 && !isNaN(weight) && weight > 0) {
+          bmi = weight / (height * height);
+          bmi = bmi.toFixed(1);
+
+          document.getElementById("bmi-value").innerText = bmi;
+          let description = "";
+
+          if (bmi < 18.5) {
+            description = "underweight.";
+          } else if (bmi >= 18.5 && bmi <= 24.9) {
+            description = "a healthy weight.";
+          } else if (bmi >= 25 && bmi <= 29.9) {
+            description = "overweight.";
+          } else {
+            description = "obese.";
+          }
+
+          document.getElementById(
+            "bmi-description"
+          ).innerText = `Your BMI suggests you're ${description}`;
+
+          // Calculate healthy weight range
+          const healthyWeightMin = (18.5 * height * height).toFixed(1);
+          const healthyWeightMax = (24.9 * height * height).toFixed(1);
+
+          document.getElementById(
+            "healthy-weight-range"
+          ).innerText = `A healthy weight range for your height is between ${healthyWeightMin}kg and ${healthyWeightMax}kg.`;
+        } else {
+          document.getElementById("bmi-value").innerText = "";
+          document.getElementById("bmi-description").innerText = "";
+          document.getElementById("healthy-weight-range").innerText = "";
+        }
+      }
+    </script>
   </body>
 </html>
