--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container hero-container">
       <section class="hero">
         <div class="hero-background"></div>
-        <img class="icon" src="./public/logo.svg" alt="Icon" />
+        <img class="icon" src="./assets/logo.svg" alt="Icon" />
         <div class="hero-content">
           <h1 class="title">Body Mass</h1>
           <h1 class="title">Index Calculator</h1>
@@ -37,7 +37,7 @@
                 id="metric-uselector"
                 class="frame-child unselector"
                 alt=""
-                src="./public/group-32.svg" />
+                src="./assets/group-32.svg" />
               <div class="selector d-none" id="metric-selector"></div>
               <span>Metric</span>
             </div>
@@ -46,7 +46,7 @@
                 id="imperial-uselector"
                 class="frame-child unselector d-none"
                 alt=""
-                src="./public/group-32.svg" />
+                src="./assets/group-32.svg" />
               <div class="selector" id="imperial-selector"></div>
               <span>Imperial</span>
             </div>
@@ -123,7 +123,7 @@
         <div class="section-one">
           <img
             class="bmi-image"
-            src="./public/imageremovebgpreview283-1@2x.png"
+            src="./assets/imageremovebgpreview283-1@2x.png"
             alt="BMI" />
         </div>
         <div class="section-two">
@@ -145,7 +145,7 @@
         <div class="tips-bg"></div>
         <div class="tips-content">
           <div class="tip">
-            <img src="./public/group-40.svg" alt="Healthy Eating" />
+            <img src="./assets/group-40.svg" alt="Healthy Eating" />
             <div class="content">
               <h3>Healthy eating</h3>
               <p>
@@ -155,7 +155,7 @@
             </div>
           </div>
           <div class="tip">
-            <img src="./public/group-41.svg" alt="Regular Exercise" />
+            <img src="./assets/group-41.svg" alt="Regular Exercise" />
             <div class="content">
               <h3>Regular exercise</h3>
               <p>
@@ -165,7 +165,7 @@
             </div>
           </div>
           <div class="tip">
-            <img src="./public/group-42.svg" alt="Adequate Sleep" />
+            <img src="./assets/group-42.svg" alt="Adequate Sleep" />
             <div class="content">
               <h3>Adequate sleep</h3>
               <p>
@@ -194,7 +194,7 @@
             <div class="box">
               <img
                 class="icon"
-                src="./public/phgenderintersexlight.svg"
+                src="./assets/phgenderintersexlight.svg"
                 alt="Gender" />
               <h3>Gender</h3>
             </div>
@@ -207,7 +207,7 @@
           </div>
           <div class="limitation">
             <div class="box">
-              <img class="icon" src="./public/phcakelight.svg" alt="Gender" />
+              <img class="icon" src="./assets/phcakelight.svg" alt="Gender" />
               <h3>Age</h3>
             </div>
 
@@ -220,7 +220,7 @@
             <div class="box">
               <img
                 class="icon"
-                src="./public/fluentemojihighcontrastflexedbiceps.svg"
+                src="./assets/fluentemojihighcontrastflexedbiceps.svg"
                 alt="Gender" />
               <h3>Muscle</h3>
             </div>
@@ -232,7 +232,7 @@
           </div>
           <div class="limitation">
             <div class="box">
-              <img class="icon" src="./public/phbabylight.svg" alt="Gender" />
+              <img class="icon" src="./assets/phbabylight.svg" alt="Gender" />
               <h3>Pregnancy</h3>
             </div>
 
@@ -244,7 +244,7 @@
           </div>
           <div class="limitation">
             <div class="box">
-              <img class="icon" src="./public/phpersonlight.svg" alt="Race" />
+              <img class="icon" src="./assets/phpersonlight.svg" alt="Race" />
               <h3>Race</h3>
             </div>
 
@@ -257,7 +257,7 @@
         </div>
       </section>
     </div>
-    <img class="desktop-child" alt="" src="./public/vector-241.svg" />
+    <img class="desktop-child" alt="" src="./assets/vector-241.svg" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
