--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous" />
 
     <link rel="stylesheet" href="index.css" />
 
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous" />
   </head>
   <body>
     <div class="container hero-container">
@@ -179,7 +179,7 @@
       </section>
     </div>
 
-    <div class="container">
+    <!-- <div class="container">
       <section class="bmi-limitations">
         <div class="contant">
           <h2 class="section-title">Limitations of BMI</h2>
@@ -257,7 +257,115 @@
           </div>
         </div>
       </section>
+    </div> -->
+    <div class="container">
+      <section class="bmi-limitations">
+        <div class="contant">
+          <h2 class="section-title">Limitations of BMI</h2>
+          <p>
+            Although BMI is often a practical indicator of healthy weight, it is
+            not suited for every person. Specific groups should carefully
+            consider their BMI outcomes, and in certain cases, the measurement
+            may not be beneficial to use.
+          </p>
+        </div>
+        <div class="limitations-content">
+          <div class="row gender d-sm-none d-lg-block">
+            <div class="col-12 order-last">
+              <div class="limitation">
+                <div class="box">
+                  <img
+                    class="icon"
+                    src="./assets/phgenderintersexlight.svg"
+                    alt="Gender" />
+                  <h3>Gender</h3>
+                </div>
+
+                <p>
+                  The development and body fat composition of girls and boys
+                  vary with age. Consequently, a child's age and gender are
+                  considered when evaluating their BMI.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="row age">
+            <div
+              class="col-sm-12 col-md-6 col-lg-7 col-xl-8 order-last age-box">
+              <div class="limitation mt-4 mt-md-0 mx-0 mx-lg-4">
+                <div class="box">
+                  <img
+                    class="icon"
+                    src="./assets/phcakelight.svg"
+                    alt="Gender" />
+                  <h3>Age</h3>
+                </div>
+
+                <p>
+                  In aging individuals, increased body fat and muscle loss may
+                  cause BMI to underestimate body fat content.
+                </p>
+              </div>
+            </div>
+            <div
+              class="col-sm-12 col-md-6 col-lg-5 col-xl-4 order-last muscle muscle-box">
+              <div class="limitation mt-4 mt-md-0">
+                <div class="box">
+                  <img
+                    class="icon"
+                    src="./assets/fluentemojihighcontrastflexedbiceps.svg"
+                    alt="Gender" />
+                  <h3>Muscle</h3>
+                </div>
+
+                <p>
+                  BMI may misclassify muscular individuals as overweight or
+                  obese, as it doesn't differentiate muscle from fat.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="row pregnancy my-5">
+            <div
+              class="col-sm-12 col-md-6 col-lg-7 col-xl-8 order-last pregnancy-box">
+              <div class="limitation mt-4 mt-md-0 mx-0 mx-lg-4">
+                <div class="box">
+                  <img
+                    class="icon"
+                    src="./assets/phbabylight.svg"
+                    alt="Gender" />
+                  <h3>Pregnancy</h3>
+                </div>
+
+                <p>
+                  Expectant mothers experience weight gain due to their growing
+                  baby. Maintaining a healthy pre-pregnancy BMI is advisable to
+                  minimise health risks for both mother and child.
+                </p>
+              </div>
+            </div>
+            <div class="col-sm-12 col-md-6 col-lg-5 col-xl-4 order-last">
+              <div class="limitation mt-4 mt-md-0">
+                <div class="box">
+                  <img
+                    class="icon"
+                    src="./assets/phpersonlight.svg"
+                    alt="Race" />
+                  <h3>Race</h3>
+                </div>
+
+                <p>
+                  Certain health concerns may affect individuals of some Black
+                  and Asian origins at lower BMIs than others. To learn more, it
+                  is advised to discuss this with your GP or practice nurse.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
+
     <img class="desktop-child" alt="" src="./assets/vector-241.svg" />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
